infra/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live-conversation-conversation-service-deployment
  labels:
    app.kubernetes.io/name: live-conversation-conversation-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: live-conversation-conversation-service
  template:
    metadata:
      labels:
        app: live-conversation-conversation-service
    spec:
      containers:
      - name: live-conversation-conversation-service
        image: crdevwe001.azurecr.io/live-conversation/conversation-service
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8999
